--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div fxLayout="row" fxLayoutAlign="center" class="login-main">
+    <div fxFlex="50">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Login Page</mat-card-title>
+            </mat-card-header>
+    
+            <mat-card-content fxLayout="column">
+                <mat-form-field>
+                    <input matInput placeholder="Email">
+                </mat-form-field>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="password">
+                </mat-form-field>
+            </mat-card-content>
+            
+            <mat-card-actions align="end">
+                <button mat-raised-button color="primary">Login</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
