--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -14,7 +14,7 @@
                 </mat-form-field>
             </mat-card-content>
             
-            <mat-card-actions align="end">
+            <mat-card-actions>
                 <button mat-raised-button color="primary">Login</button>
             </mat-card-actions>
         </mat-card>
