--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -1,6 +1,16 @@
 .login-main {
     margin-top: 5rem;
     mat-card {
+        padding: 10px;
         width: 100%;
+        mat-card-header {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            padding: 30px auto;
+            justify-content: center;
+        }
+        mat-card-actions {
+            justify-content: center;
+        }
     }
 }
