--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -5,18 +5,20 @@
                 <mat-card-title>Login Page</mat-card-title>
             </mat-card-header>
     
-            <mat-card-content fxLayout="column">
-                <mat-form-field>
-                    <input matInput placeholder="Email">
-                </mat-form-field>
-                <mat-form-field>
-                    <input type="password" matInput placeholder="password">
-                </mat-form-field>
-            </mat-card-content>
-            
-            <mat-card-actions>
-                <button mat-raised-button color="primary">Login</button>
-            </mat-card-actions>
+            <form [formGroup]="loginForm" (submit)="submitLogin()" novalidate>
+                <mat-card-content fxLayout="column">
+                    <mat-form-field>
+                        <input matInput placeholder="Email" formControlName="email">
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input type="text" matInput placeholder="password" formControlName="password">
+                    </mat-form-field>
+                </mat-card-content>
+                
+                <mat-card-actions>
+                    <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.status === 'INVALID'">Login</button>
+                </mat-card-actions>
+            </form>
         </mat-card>
     </div>
 </div>
