--- a/src/app/pages/products/products/products.component.html
+++ b/src/app/pages/products/products/products.component.html
@@ -1,1 +1,23 @@
-<p>products works!</p>
+<div class="mat-elevation-z8 products">
+    <div fxLayout="row wrap" fxLayoutAlign="center">
+        <div fxFlex="25%" *ngFor="let item of data">
+            <mat-card class="product-card">
+                <mat-card-header>
+                    <div mat-card-avatar class="product-header-image"></div>
+                    <mat-card-title>{{item.title}}</mat-card-title>
+                    <mat-card-subtitle>{{item.price}}$</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image [src]="item.image" [alt]="item.title">
+                <mat-card-content>
+                    <p>
+                        {{item.description}}
+                    </p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-button>VIEW</button>
+                    <button mat-button>SHARE</button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+</div>
