--- a/src/app/pages/products/details/details.component.html
+++ b/src/app/pages/products/details/details.component.html
@@ -1,1 +1,13 @@
-<p>details works!</p>
+<mat-card class="example-card">
+    <img mat-card-lg-image [src]="data.image">
+    <mat-card-header>
+        <mat-card-title-group>
+            <mat-card-title>{{data.title}}</mat-card-title>
+            <mat-card-subtitle>$ {{data.price}}</mat-card-subtitle>
+            <mat-card-subtitle>{{data.category}}</mat-card-subtitle>
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        {{data.description}}
+    </mat-card-content>
+</mat-card>
