--- a/src/app/pages/products/products/products.component.html
+++ b/src/app/pages/products/products/products.component.html
@@ -10,11 +10,11 @@
                 <img mat-card-image [src]="item.image" [alt]="item.title">
                 <mat-card-content>
                     <p>
-                        {{item.description}}
+                        {{item.truncatedDescription}}
                     </p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button>VIEW</button>
+                    <button mat-button routerLink="/products/details" [state]="{ data: item }">VIEW</button>
                     <button mat-button>SHARE</button>
                 </mat-card-actions>
             </mat-card>
