page not found. wild card route UI added

--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,4 @@
-<p>page-not-found works!</p>
+<div class="p-n-f">
+    <img src="https://miro.medium.com/v2/resize:fit:1400/1*zE2qnVTJehut7B8P2aMn3A.gif" />
+    <h1>Page Not Found!</h1>
+</div>
