CRUD products done

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="center" class="login-main">
-    <div fxFlex.md="50" fxFlex.sm="90">
+    <div fxFlex.xl="50" fxFlex.lg="50" fxFlex.md="50" fxFlex.xs="90">
         <mat-card>
             <mat-card-header>
                 <mat-card-title>Login Page</mat-card-title>
