--- a/src/app/pages/products/listing/listing.component.scss
+++ b/src/app/pages/products/listing/listing.component.scss
@@ -1,6 +1,11 @@
 .listing {
     padding: 30px;
 
+    .add-product{
+        margin-bottom: 20px;
+        float: right;
+    }
+
     .product-img {
         width: 50px;
         height: 50px;
