--- a/src/app/pages/products/listing/listing.component.html
+++ b/src/app/pages/products/listing/listing.component.html
@@ -59,6 +59,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of products">
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
     </mat-paginator>
 </div>
