--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -11,7 +11,7 @@
                         <input matInput placeholder="Email" formControlName="email">
                     </mat-form-field>
                     <mat-form-field>
-                        <input type="text" matInput placeholder="password" formControlName="password">
+                        <input type="password" matInput placeholder="password" formControlName="password">
                     </mat-form-field>
                 </mat-card-content>
                 
